[B]1.9.11[/B]
- fixed: return Hungarian title in search results when search drops directly to the movie page

[B]1.9.10[/B]
- fixed: further fixes for Title after site layout changes

[B]1.9.9[/B]
- fixed: Title, Plot and Studio after site layout changes

[B]1.9.8[/B]
- fixed: Director scraping

[B]1.9.7[/B]
- fixed: Search results, there might be some bugs still

[B]1.9.5[/B]
- fixed: Hungarian title will be scraped instead of original title in some cases once again

[B]1.9.4[/B]
- fixed: Hungarian title will be scraped instead of original title in some cases

[B]1.9.3[/B]
- fixed: Hungarian Genre

[B]1.9.2[/B]
- fixed: Original Title

[B]1.9.1[/B]
- fixed: mpaa rating won't scrape from IMDb

[B]1.9.0[/B]
- added: Language preference for Sets

[B]1.8.0[/B]
- added: Trailers from TMDb
- added: Language preference for Posters
- refactored: Settings and Set Title Scraping

[B]1.7.2[/B]
- fixed: dependency versioning

[B]1.7.1[/B]
- fixed: genres scraping due to IMDb layout changes

[B]1.7.0[/B]
- added: Set Title scraping from themoviedb.org

[B]1.6.2[/B]
- fixed: Originaltitle scraping

[B]1.6.1[/B]
- fixed: Originaltitle some time contains 'IMDb - ' string

[B]1.6.0[/B]
- added: Option to translate genres to Hungarian - Credits to peterk

[B]1.5.3[/B]
- fixed: IMDb won't get identified in some cases

[B]1.5.2[/B]
- fixed: IMDb rating after another site change

[B]1.5.1[/B]
- fixed: IMDb rating

[B]1.5.0[/B]
- re-added: Hungarian and Original title in the same title field (not recommended to use)

[B]1.4.3[/B]
- fixed: incorrectly scraped year under some circumtances

[B]1.4.2[/B]
- fixed: actor roles

[B]1.4.1[/B]
- fixed: won't scrape imdb details and artwork for some movies

[B]1.4.0[/B]
- added: fallback to imdb plot if no plot is available on port.hu

[B]1.3.6[/B]
- fixed: actor images

[B]1.3.5[/B]
Fixed: directors (sometimes wrong director got scraped)

[B]1.3.4[/B]
Fixed: Fixed title and year scraping due to site changes

[B]1.3.3[/B]
Fixed: actors scraping
