@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.port.hu"
        name="Port.hu"
-       version="1.9.11"
+       version="1.9.12"
        provider-name="Olympia">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
@@ -9,7 +9,6 @@
     <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
     <import addon="metadata.common.imdb.com" version="2.1.9"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
-    <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="hu"
