@@ -8,7 +8,6 @@
     <string id="30004">Enable posters from themoviedb.org</string>
     <string id="30005">Enable posters from IMPAwards</string>
     <string id="30006">Enable posters from MoviePosterDB</string>
-    <string id="30007">Enable trailers from HD-Trailers.net</string>
     <string id="30008">Translate genres to Hungarian</string>
     <string id="30009">Get Set titles from themoviedb.org</string>
     <string id="30010">Preferred Poster Language</string>
