@@ -8,7 +8,6 @@
     <string id="30004">Borítók letöltése themoviedb.org-ról</string>
     <string id="30005">Borítók letöltése IMPAwards-ról</string>
     <string id="30006">Borítók letöltése MoviePosterDB-ról</string>
-    <string id="30007">Filmelőzetes letöltése a HD-Trailers.net-ről</string>
     <string id="30008">Műfaj-elnevezések fordítása magyarra</string>
     <string id="30009">BOXSET elnevezések themoviedb.org-ról</string>
     <string id="30010">Preferált borító nyelv</string>
