@@ -1,3 +1,6 @@
+[B]1.9.12[/B]
+- removed: option to scrape trailers from hd-trailers.net (it was broken)
+
 [B]1.9.11[/B]
 - fixed: return Hungarian title in search results when search drops directly to the movie page
 
